--- a/zoj-backend-judge-service/src/main/resources/application.yml
+++ b/zoj-backend-judge-service/src/main/resources/application.yml
@@ -70,7 +70,12 @@ mybatis-plus:
 code:
   sandbox:
     remote
-
+remote:
+  codesandbox:
+    host:
+      localhost
+    port:
+      8081
 
 # 对象存储
 # todo 需替换配置
